<?xml version="1.0" encoding="utf-8"?>
<com.liuguangqiang.swipeback.SwipeBackLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeBackLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:id="@+id/action_settings"
    android:textDirection="rtl"
    tools:context="com.twins.osama.wasfa.Activitiy.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/backLogo"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/go_back"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="20dp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_go_back_left_arrow" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="left|center"
                android:layout_marginStart="5dp"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:text="وصفة"
                android:textSize="@dimen/titel" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mineTransport"
        android:padding="10dp"
        android:text="@string/chColor"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/titel" />

    <TextView
        android:id="@+id/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="5dp"
        android:text="@string/color"
        android:textColor="@color/back_digg"
        android:textSize="@dimen/textSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mineTransport"
        android:padding="10dp"
        android:text="@string/about"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/titel" />

    <TextView
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="5dp"
        android:text="@string/info"
        android:textColor="@color/back_digg"
        android:textSize="@dimen/textSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mineTransport" />

    <TextView
        android:id="@+id/verion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="5dp"
        android:text="@string/verion"
        android:textColor="@color/back_digg"
        android:textSize="@dimen/textSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mineTransport" />

</LinearLayout>
</com.liuguangqiang.swipeback.SwipeBackLayout>